Update SSID and password

--- a/RaspberryPi-AP-Config/hostapd/hostapd.conf
+++ b/RaspberryPi-AP-Config/hostapd/hostapd.conf
@@ -12,5 +12,5 @@ wpa=2
 wpa_key_mgmt=WPA-PSK
 wpa_pairwise=TKIP
 rsn_pairwise=CCMP
-ssid=LostAndFound
-wpa_passphrase=Comet123
+ssid=PhotoFrame
+wpa_passphrase=Chadbourne1
